--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,5 +28,8 @@ tbody tr {
 
 tbody tr td {
     padding: 2px;
-
+    max-width: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
